# EAG

./: .gitignore
Assignment_1/recall/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
Assignment_1/recall/scripts/: make_icons.mjs
Assignment_1/recall/src/: manifest.json
Assignment_1/recall/src/background/: service_worker.ts
Assignment_1/recall/src/background/search/: bm25.ts  index_manager.ts
Assignment_1/recall/src/background/store/: db.ts  settings.ts
Assignment_1/recall/src/content/: capture.ts  readability.ts  toast.ts
Assignment_1/recall/src/options/: index.html  options.css  options.ts
Assignment_1/recall/src/popup/: index.html  popup.css  popup.ts
Assignment_1/recall/src/shared/: config.ts  types.ts  util.ts
Assignment_3/second-brain-agent/: README.md  background.js  gemini.js  manifest.json  popup.css  popup.html  popup.js  tools.js
Assignment_4/: README.md  dashboard.py  pyproject.toml  server.py
Assignment_4/data/: diffractions.json
Assignment_4/docs/: mcp-client-config.md
Assignment_4/docs/superpowers/specs/: 2026-05-01-news-diffractor-design.md
Assignment_4/tests/: test_coverage.py  test_e2e.py  test_mcp_client.py  test_store.py
Assignment_4/tools/: __init__.py  coverage.py  store.py  ui.py
