[project]
name = "news-diffractor"
version = "0.1.0"
description = "MCP server that diffracts a news story across multiple outlets and surfaces a side-by-side dashboard."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "prefab-ui>=0.19",
    "httpx>=0.27",
    "feedparser>=6.0",
    "trafilatura>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
